--- a/Default/falloutcustom.ini
+++ b/Default/falloutcustom.ini
@@ -16,3 +16,41 @@ sFontFile_7=Textures\Fonts\karl_gb.fnt
 sFontFile_8=Textures\Fonts\karl_gb.fnt
 sFontFile_9=Textures\Fonts\karl_gb.fnt
 
+[Weather]
+bPrecipitation=0
+
+[Grass]
+bDrawShaderGrass=0
+fGrassWindMagnitudeMax=0.0000
+fGrassWindMagnitudeMin=0.0000
+fGrassFadeRange=0
+
+[Water]
+bForceHighDetailReflections=0
+bForceLowDetailReflections=1
+uSurfaceFPS=1
+bUseWaterReflectionBlur=1
+bUseBulletWaterDisplacements=0
+bUsePerWorldSpaceWaterNoise=1
+bUseWater=1
+fExteriorWaterReflectionThreshold=300.0000
+fInteriorWaterReflectionThreshold=10.0000
+fRefractionWaterPlaneBias=3.0000
+fWadingWaterQuadSize=2048.0000
+fWadingWaterTextureRes=512.0000
+fWaterGroupHeightRange=10.0000
+iWaterNoiseResolution=256
+SSurfaceTexture=water
+uMaxExteriorWaterReflections=2
+uMaxInteriorWaterReflections=4
+bForceHighDetailLandReflections=0
+
+[TerrainManager]
+fTreeLoadDistance=26000
+bKeepLowDetailTerrain=1
+bUseDistantTrees=0
+fDetailTextureScale=3.0000
+fMorphEndDistanceMult=0.6500
+fMorphStartDistanceMult=0.7000
+uDistantTreeBlockCacheSizePerCell=1
+uTerrainTextureFadeTime=1000
