add background load section

--- a/Default/falloutcustom.ini
+++ b/Default/falloutcustom.ini
@@ -54,3 +54,9 @@ fMorphEndDistanceMult=0.6500
 fMorphStartDistanceMult=0.7000
 uDistantTreeBlockCacheSizePerCell=1
 uTerrainTextureFadeTime=1000
+
+[BackgroundLoad]
+bUseBackgroundFileLoader=1
+bBackgroundLoadLipFiles=1
+bLoadBackgroundFaceGen=1
+bSelectivePurgeUnusedOnFastTravel=1
