Ensure the quest markers are displayed.

--- a/Default/falloutcustom.ini
+++ b/Default/falloutcustom.ini
@@ -60,3 +60,6 @@ bUseBackgroundFileLoader=1
 bBackgroundLoadLipFiles=1
 bLoadBackgroundFaceGen=1
 bSelectivePurgeUnusedOnFastTravel=1
+
+[Gameplay]
+bShowQuestMarkers=1
