remove unused water setting; set some display setting

--- a/Default/falloutcustom.ini
+++ b/Default/falloutcustom.ini
@@ -26,23 +26,11 @@ fGrassWindMagnitudeMin=0.0000
 fGrassFadeRange=0
 
 [Water]
-bForceHighDetailReflections=0
 bForceLowDetailReflections=1
 uSurfaceFPS=1
 bUseWaterReflectionBlur=1
 bUseBulletWaterDisplacements=0
 bUsePerWorldSpaceWaterNoise=1
-bUseWater=1
-fExteriorWaterReflectionThreshold=300.0000
-fInteriorWaterReflectionThreshold=10.0000
-fRefractionWaterPlaneBias=3.0000
-fWadingWaterQuadSize=2048.0000
-fWadingWaterTextureRes=512.0000
-fWaterGroupHeightRange=10.0000
-iWaterNoiseResolution=256
-SSurfaceTexture=water
-uMaxExteriorWaterReflections=2
-uMaxInteriorWaterReflections=4
 bForceHighDetailLandReflections=0
 
 [TerrainManager]
@@ -67,3 +55,8 @@ bShowQuestMarkers=1
 [SpeedTree]
 bEnableTrees=0
 
+[Display]
+iMaxAnisotropy=8
+fSpecularLODStartFade=1000.0000
+fShadowLODStartFade=200.0000
+fLightLODStartFade=1000.0000
