disable intro video

--- a/Default/falloutcustom.ini
+++ b/Default/falloutcustom.ini
@@ -4,6 +4,8 @@ iNumHWThreads=4
 bPreemptivelyUnloadCells=1
 bSelectivePurgeUnusedOnFastTravel=1
 #bLoadFaceGenHeadEGTFiles=0
+SMainMenuMovieIntro=0
+SIntroSequence=0
 
 [Fonts]
 sFontFile_1=Textures\Fonts\karl_gb.fnt
