--- a/Default/fallout.ini
+++ b/Default/fallout.ini
@@ -185,7 +185,7 @@ iActorShadowCountExt=2
 fPipboy1stPersonFOV=47.0
 fDefault1stPersonFOV=55.0000
 bLODNoiseAniso=1
-iMaxAnisotropy=8
+iMaxAnisotropy=15
 fLandLOFadeSeconds=15.0
 bEnableEyefinity=1
 
@@ -696,14 +696,14 @@ This may result in errors. Saving again will clear this message
 but not necessarily fix any errors.
 
 [Archive]
-SInvalidationFile=ArchiveInvalidation.txt
+SInvalidationFile=
 iRetainFilenameOffsetTable=1
 iRetainFilenameStringTable=1
 iRetainDirectoryStringTable=1
 bCheckRuntimeCollisions=0
 bInvalidateOlderFiles=1
 bUseArchives=1
-SArchiveList=Fallout - AI!.bsa, Fallout - Misc.bsa, Fallout - Textures.bsa, Fallout - Textures2.bsa, Fallout - Meshes.bsa, Fallout - Voices1.bsa, Fallout - Sound.bsa
+SArchiveList=Fallout - Invalidation.bsa, Fallout - AI!.bsa, Fallout - Misc.bsa, Fallout - Textures.bsa, Fallout - Textures2.bsa, Fallout - Meshes.bsa, Fallout - Voices1.bsa, Fallout - Sound.bsa
 
 [CameraPath]
 iTake=0
